Currency Exchange Calculation Logic

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ DB_PORT=15432
 DB_USER=app-test
 DB_PASSWORD=app-test
 DB_DATABASE=app-test
+
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=16379
+
 HASH_DRIVER=bcrypt
 
 MAIL_CONNECTION=smtp
@@ -21,3 +26,5 @@ MAIL_HOST=smtp.gmail.com
 MAIL_USERNAME=jsinnertests@gmail.com
 MAIL_PASSWORD=123456Jg$
 MAIL_PORT=587
+
+MINUTES_TO_EXPIRE_CACHED_EXCHANGE_INFO=10
