--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.9",
+    "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
     "adonis-swagger": "^1.2.9",
+    "is_js": "^0.9.0",
     "md5": "^2.2.1",
+    "moment": "^2.24.0",
     "pg": "^7.12.1"
   },
   "devDependencies": {},
